--- a/financas/src/app/app.component.scss
+++ b/financas/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .menuPrincipal{
-    background-color: #1E90A0;;
+    background-color: #1E90A0;
+    justify-content:space-between;
 }
 ::ng-deep .btn-menu {
  background-color: #1E90A0 !important;
@@ -15,5 +16,45 @@ span{
 ::ng-deep .mat-mdc-menu-item .mat-mdc-menu-submenu-icon polygon {
     color: #FFF !important;
 }
+
+.logo{
+    max-height:50px;
+  }
+.mat-fab-custom{
+  font-size: 12px;
+  box-shadow: none;
+  background-color: #1E90A0;
+  margin: 0 0 -10px
+}
+.saudacao{
+  font-size: 12px;
+}
+
+.header-section{
+
+  gap: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  #select-unidade{
+    margin-left: 2rem;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+    min-width: 488px;
+    ::ng-deep .mat-mdc-form-field-subscript-wrapper{
+      display:none;
+    }
+  }
+}
+
+.btn-user{
+    width: auto;
+}
+
+.icon-menu{
+    color:#fff;
+}
+
+
  
  
