--- a/financas/src/app/modules/usuario/pages/usuarioLista.page.html
+++ b/financas/src/app/modules/usuario/pages/usuarioLista.page.html
@@ -1,29 +1,58 @@
- <mat-form-field>
-    <mat-label>Pesquisar...</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field> 
-  
-  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef> Nome do Usuário </th>
-      <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> Email do usuário </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-    </ng-container>
-  
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-    <!-- Row shown when there is no matching data. -->
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td> 
-    </tr>
-  </table>
-  
+<div class="row header-page">
+  <div class="col text-center">
+      <h1 class="mt-4 titulo-tabela-h1"> Relação de Usuários </h1>
+  </div>
+</div>
+
+<div class="container-fluid">
+
+  <h2 id="titulo-filtro">Filtros</h2>
+
+  <form [formGroup]="formFiltro">
+    <div class="row filtro-select" >
+      <div class="col-6 processo">
+        <mat-form-field class="custom-select">
+          <mat-label> Nome do Usuário </mat-label>
+          <input formControlName="numeroPPA" type="text" matInput [matAutocomplete]="autoResp">
+          <mat-autocomplete autoActiveFirstOption #autoResp="matAutocomplete" [displayWith]="obterNumeroPPA"
+            (optionSelected)="aplicarFiltro()">
+            <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
+            <mat-option *ngFor="let item of ppaFiltro" [value]="item">
+              {{item?.nome}} - {{item?.email}}
+            </mat-option>
+          </mat-autocomplete>
+          <span class="dropdown-icon">
+            <svg viewBox="0 0 24 24">
+              <path d="M7 10l5 5 5-5z"></path>
+            </svg>
+          </span>
+        </mat-form-field>
+      </div>
+
+      <div class="col-6  processo">
+        <mat-form-field class="custom-select">
+          <mat-label> E-mail do Usuário </mat-label>
+          <input formControlName="numeroPPA" type="text" matInput [matAutocomplete]="autoResp">
+          <mat-autocomplete autoActiveFirstOption #autoResp="matAutocomplete" [displayWith]="obterNumeroPPA"
+            (optionSelected)="aplicarFiltro()">
+            <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
+            <mat-option *ngFor="let item of ppaFiltro" [value]="item">
+              {{item?.nome}} - {{item?.email}}
+            </mat-option>
+          </mat-autocomplete>
+          <span class="dropdown-icon">
+            <svg viewBox="0 0 24 24">
+              <path d="M7 10l5 5 5-5z"></path>
+            </svg>
+          </span>
+        </mat-form-field>
+      </div>
+
+    </div>
+
+  </form>
+</div>
+
+<tabelaCrud [tabControl]="tabControl" (atualizar)="atualizarRegistros()" (inserir)="inserir()"
+  (alterar)="alterar($event)" (excluir)="excluir($event)">
+</tabelaCrud>
