--- a/financas/src/app/modules/usuario/pages/usuarioLista.page.html
+++ b/financas/src/app/modules/usuario/pages/usuarioLista.page.html
@@ -13,11 +13,11 @@
       <div class="col-6 processo">
         <mat-form-field class="custom-select">
           <mat-label> Nome do Usuário </mat-label>
-          <input formControlName="numeroPPA" type="text" matInput [matAutocomplete]="autoResp">
-          <mat-autocomplete autoActiveFirstOption #autoResp="matAutocomplete" [displayWith]="obterNumeroPPA"
+          <input formControlName="usuario" type="text" matInput [matAutocomplete]="autoResp">
+          <mat-autocomplete autoActiveFirstOption #autoResp="matAutocomplete" [displayWith]="obterUsuario"
             (optionSelected)="aplicarFiltro()">
             <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
-            <mat-option *ngFor="let item of ppaFiltro" [value]="item">
+            <mat-option *ngFor="let item of usuarioFiltro" [value]="item">
               {{item?.nome}} - {{item?.email}}
             </mat-option>
           </mat-autocomplete>
@@ -32,11 +32,11 @@
       <div class="col-6  processo">
         <mat-form-field class="custom-select">
           <mat-label> E-mail do Usuário </mat-label>
-          <input formControlName="numeroPPA" type="text" matInput [matAutocomplete]="autoResp">
-          <mat-autocomplete autoActiveFirstOption #autoResp="matAutocomplete" [displayWith]="obterNumeroPPA"
+          <input formControlName="email" type="text" matInput [matAutocomplete]="autoResp">
+          <mat-autocomplete autoActiveFirstOption #autoResp="matAutocomplete" [displayWith]="obterEmail"
             (optionSelected)="aplicarFiltro()">
             <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
-            <mat-option *ngFor="let item of ppaFiltro" [value]="item">
+            <mat-option *ngFor="let item of usuarioFiltro" [value]="item">
               {{item?.nome}} - {{item?.email}}
             </mat-option>
           </mat-autocomplete>
