Ajuste layout tela cadastro

--- a/financas/src/app/modules/usuario/pages/usuarioCad/usuarioCad.page.html
+++ b/financas/src/app/modules/usuario/pages/usuarioCad/usuarioCad.page.html
@@ -11,14 +11,9 @@
 
                 <mat-tab label="Lista de usuários">
                     <ng-template matTabContent>
-                        <usuarioCad></usuarioCad>
+                        <usuarioCadComponent></usuarioCadComponent>
                     </ng-template>
                 </mat-tab>
-                <!-- <mat-tab label="" [disabled]="desabilitaAba">
-                    <ng-template matTabContent>
-                         <usuarioCad><usuarioCad/> 
-                    </ng-template>
-                </mat-tab> -->
 
             </mat-tab-group>
         </div>
