--- a/financas/src/app/modules/usuario/components/usuarioCadastro/usuarioCad.component.html
+++ b/financas/src/app/modules/usuario/components/usuarioCadastro/usuarioCad.component.html
@@ -10,7 +10,7 @@
                             <div class="col-6">
                                 <mat-form-field>
                                     <mat-label>Nome do Usuário</mat-label>
-                                    <input type="text" formControlName="usuario">
+                                    <input type="text" formControlName="usuario" matInput>
                                     <mat-error>
                                         <validacao-campo [control]="form.controls['usuario']"
                                             [mensagens]="msgValidacao['usuario']">
@@ -21,7 +21,7 @@
                             <div class="col-6">
                                 <mat-form-field>
                                     <mat-label>Email do Usuário</mat-label>
-                                    <input type="text" formControlName="email">
+                                    <input type="text" formControlName="email" matInput>
                                     <mat-error>
                                         <validacao-campo [control]="form.controls['email']"
                                             [mensagens]="msgValidacao['email']">
@@ -37,8 +37,7 @@
                                 <div class="col-12">
                                     <mat-form-field class="processo">
                                         <mat-label>Data de Inclusão</mat-label>
-                                        <input matInput [matDatepicker]="dp1" formControlName="dataInclusao">
-                                        <mat-hint></mat-hint>
+                                        <input matInput [matDatepicker]="dp1" formControlName="dataInclusao">                              
                                         <mat-datepicker-toggle matIconSuffix [for]="dp1"></mat-datepicker-toggle>
                                         <mat-datepicker #dp1></mat-datepicker>
                                         <mat-error>
