--- a/financas/src/styles.scss
+++ b/financas/src/styles.scss
@@ -3,6 +3,10 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
+html{
+  --mdc-filled-text-field-focus-active-indicator-color:#1E90A0;
+}
+
 
 //Cores padrão
 $verde-primario: #1E90A0;
@@ -127,4 +131,30 @@ $verde-terciario: #01707e;
   color:#01707e !important;
 }
 
+.mdc-text-field--filled:not(.mdc-text-field--disabled) .mdc-text-field__input {
+  color:#025050 !important;
+}
+ 
+.mat-mdc-option{
+  color:#025050 !important;
+}
+
+.mat-mdc-tab.mdc-tab--active .mdc-tab__text-label {
+  color:#1E90A0 !important;
+}
+
+.mat-mdc-tab-group, .mat-mdc-tab-nav-bar {
+  --mdc-tab-indicator-active-indicator-color: #1E90A0 !important;
+  --mat-tab-header-active-label-text-color: #1E90A0 !important;
+  --mat-tab-header-active-ripple-color: #1E90A0 !important;
+  --mat-tab-header-inactive-ripple-color: #1E90A0 !important;
+  --mat-tab-header-active-focus-label-text-color: #1E90A0 !important;
+  --mat-tab-header-active-hover-label-text-color: #1E90A0 !important;
+  --mat-tab-header-active-focus-indicator-color: #1E90A0 !important;
+  --mat-tab-header-active-hover-indicator-color: #1E90A0 !important;
+}
+
+.mat-mdc-raised-button.mat-primary {
+  --mdc-protected-button-container-color: #1E90A0;;
+}
 
