--- a/financas/front-end/src/styles.scss
+++ b/financas/front-end/src/styles.scss
@@ -1,4 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+@import 'ngx-toastr/toastr';
+@import 'theme.scss';
+
+.toast-position{
+  top: 40px;
+  bottom: 30px;
+  right: 10px;
+  //background-color: $verde-primario;
+}
+
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  background-color: #0fd2f0 !important;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
