Ajuste no persistir usuário

--- a/financas/front-end/src/styles.scss
+++ b/financas/front-end/src/styles.scss
@@ -168,7 +168,7 @@ $verde-terciario: #01707e;
   --mat-tab-header-active-hover-indicator-color:   $verde-primario !important;
 }
  
-mat-mdc-dialog-container .mdc-dialog__title{
+.mat-mdc-dialog-container .mdc-dialog__title{
   color: $verde-primario !important;
 }
 .mat-mdc-raised-button.mat-primary {
