Inicio da implementaçao de despesa e receita

--- a/financas/front-end/src/app/app.component.html
+++ b/financas/front-end/src/app/app.component.html
@@ -27,27 +27,24 @@
       <mat-menu class="btn-menu" #Despesa="matMenu">
 
         <button mat-menu-item [routerLink]="['/','despesa','lista']">
-          <span>T1</span>
+          <span>Despesa</span>
         </button>
 
       </mat-menu>
 
       <mat-menu class="btn-menu" #Receita="matMenu">
         <button mat-menu-item [routerLink]="['/','receita','lista']">
-          <span>T2</span>
+          <span>Receita</span>
         </button>
 
       </mat-menu>
 
       <mat-menu class="btn-menu" #menuControleAcesso="matMenu">
         <button mat-menu-item [routerLink]="['/','usuario','lista']">
-          <span>usuario</span>
+          <span>Usuário</span>
         </button>
 
         <mat-divider></mat-divider>
-        <button mat-menu-item [routerLink]="['/','permissao','lista']">
-          <span>permissão</span>
-        </button>
       </mat-menu>
     </div>
 
