--- a/financas/front-end/src/app/modules/usuario/pages/usuarioLista/usuarioLista.page.scss
+++ b/financas/front-end/src/app/modules/usuario/pages/usuarioLista/usuarioLista.page.scss
@@ -1,15 +1,15 @@
-.spinner-container {
-    position: fixed; 
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    background-color: rgba(255, 255, 255, 0.8); 
-    z-index: 1000; 
-}
+// .spinner-container {
+//     position: fixed; 
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     display: flex;
+//     justify-content: center; 
+//     align-items: center; 
+//     background-color: rgba(255, 255, 255, 0.8); 
+//     z-index: 1000; 
+// }
 
   
   
