--- a/financas/front-end/src/styles.scss
+++ b/financas/front-end/src/styles.scss
@@ -179,5 +179,16 @@ $verde-terciario: #01707e;
   color: #025050 !important;
 }
  
- 
+.spinner-container {
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  background-color: rgba(255, 255, 255, 0.8); 
+  z-index: 1000; 
+}
  
