Desenvolvendo telas cadastro de receita, tipo de pagamento e fonte de renda

--- a/financas/front-end/src/app/modules/despesa/pages/despesaDet/despesaDet.page.html
+++ b/financas/front-end/src/app/modules/despesa/pages/despesaDet/despesaDet.page.html
@@ -8,11 +8,11 @@
                         <despesaCadComponent></despesaCadComponent>
                     </ng-template>
                 </mat-tab>
-                <!-- <mat-tab label="Cadastro de tipo de pagamento" [disabled]="desabilitaAba">
+                 <mat-tab label="Cadastro de tipo de pagamento">
                     <ng-template matTabContent>
-                     <TipoPagamentoComponent></TipoPagamentoComponent>                      
+                     <tipoPagamentoCadComponent></tipoPagamentoCadComponent>                      
                     </ng-template>
-                    </mat-tab> -->
+                    </mat-tab> 
 
             </mat-tab-group>
         </div>
