--- a/financas/front-end/src/app/modules/receita/pages/receitaLista/receitaLista.page.html
+++ b/financas/front-end/src/app/modules/receita/pages/receitaLista/receitaLista.page.html
@@ -15,7 +15,7 @@
   
     <form [formGroup]="formFiltro">
       <div class="row filtro-select" >
-        <div class="col-4 processo">
+        <div class="col-3 processo">
           <mat-form-field class="custom-select">
             <mat-label> Descrição da receita </mat-label>
             <input formControlName="descricaoReceita" type="text" matInput [matAutocomplete]="autoResp">
@@ -34,11 +34,31 @@
           </mat-form-field>
         </div>
         
-        <div class="col-4 processo">
+        <div class="col-3 processo">
+          <mat-form-field class="custom-select">
+            <mat-label> Fonte de renda </mat-label>
+            <input formControlName="fonteDeRenda" type="text" matInput [matAutocomplete]="autoResp2">
+            <mat-autocomplete autoActiveFirstOption #autoResp2="matAutocomplete" [displayWith]="obterFonteDeRenda"
+              (optionSelected)="aplicarFiltro()">
+              <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
+              <mat-option *ngFor="let item of fonteDeRendaFiltro" [value]="item">
+                {{item?.fonteDeRenda}}
+              </mat-option>
+            </mat-autocomplete>
+            <span class="dropdown-icon">
+              <svg viewBox="0 0 24 24">
+                <path d="M7 10l5 5 5-5z"></path>
+              </svg>
+            </span>
+          </mat-form-field>
+        </div>
+
+
+        <div class="col-3 processo">
           <mat-form-field class="custom-select">
             <mat-label> Receita mensal </mat-label>
-            <input formControlName="receitaMensal" type="text" matInput [matAutocomplete]="autoResp2">
-            <mat-autocomplete autoActiveFirstOption #autoResp2="matAutocomplete" [displayWith]="obterReceitaMensal"
+            <input formControlName="receitaMensal" type="text" matInput [matAutocomplete]="autoResp3">
+            <mat-autocomplete autoActiveFirstOption #autoResp3="matAutocomplete" [displayWith]="obterReceitaMensal"
               (optionSelected)="aplicarFiltro()">
               <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
               <mat-option *ngFor="let item of receitaMensalFiltro" [value]="item">
@@ -53,11 +73,11 @@
           </mat-form-field>
         </div>
         
-        <div class="col-4 processo">
+        <div class="col-3 processo">
           <mat-form-field class="custom-select">
             <mat-label> Receita anual </mat-label>
-            <input formControlName="receitaAnual" type="text" matInput [matAutocomplete]="autoResp3">
-            <mat-autocomplete autoActiveFirstOption #autoResp3="matAutocomplete" [displayWith]="obterReceitaAnual"
+            <input formControlName="receitaAnual" type="text" matInput [matAutocomplete]="autoResp4">
+            <mat-autocomplete autoActiveFirstOption #autoResp4="matAutocomplete" [displayWith]="obterReceitaAnual"
               (optionSelected)="aplicarFiltro()">
               <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
               <mat-option *ngFor="let item of receitaAnualFiltro" [value]="item">
