Ajuste metódos da API Despesa

--- a/financas/front-end/src/app/modules/despesa/components/despesaCad/despesaCad.component.html
+++ b/financas/front-end/src/app/modules/despesa/components/despesaCad/despesaCad.component.html
@@ -30,7 +30,7 @@
 
                                     <mat-select formControlName="tipoPagamento" (selectionChange)="carregarComboCartoesDisponiveis()">
                                         <mat-option *ngFor="let item of listaTipoPagamentoFiltro" [value]="item.id">
-                                            {{item.tipoPagamento}}
+                                            {{item.descricao}}
                                         </mat-option>
                                     </mat-select>
 
