--- a/financas/front-end/src/app/modules/despesa/pages/despesaLista/despesaLista.page.html
+++ b/financas/front-end/src/app/modules/despesa/pages/despesaLista/despesaLista.page.html
@@ -18,7 +18,7 @@
         <div class="col-3 processo">
           <mat-form-field class="custom-select">
             <mat-label> Descrição da Despesa </mat-label>
-            <input formControlName="descricaoDespesa" type="text" matInput [matAutocomplete]="autoResp">
+            <input formControlName="despesa" type="text" matInput [matAutocomplete]="autoResp">
             <mat-autocomplete autoActiveFirstOption #autoResp="matAutocomplete" [displayWith]="obterDescricaoDespesa"
               (optionSelected)="aplicarFiltro()">
               <mat-option>&lt;&lt;Selecione&gt;&gt;</mat-option>
